# monitoring-sampah-yogyakarta

./: .gitignore  CLAUDE.md  ML Project Doc.docx  convert.py  data.yaml  docker-compose.yml  main.py  migration.py  postprocessing.ipynb  preprocessing.ipynb  pyproject.toml  training.ipynb
app/: main.py  worker.py
app/utils/: __init__.py  postprocessing.py  preprocessing.py
client/: camera.py
dashboard-monitoring/: package-lock.json  package.json
dashboard-monitoring/app/: page.tsx
migrations/: cameras.sql  detections.sql
notebooks/: postprocessing.ipynb
ui/: camera.py
