[project]
name = "monitoring-sampah-yogyakarta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "jupyterlab>=4.5.6",
    "mlflow>=3.11.1",
    "onnx>=1.21.0",
    "onnxruntime>=1.25.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.4.0",
    "ultralytics>=8.4.39",
    "uvicorn>=0.44.0",
]
